<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_attendance"
        android:icon="@drawable/icon_attendence"
        android:title="@string/title_attendance" />
    <item
        android:id="@+id/action_assignment"
        android:icon="@drawable/icon_assignments"
        android:title="@string/title_assignment" />
    <item
        android:id="@+id/action_courses"
        android:icon="@drawable/icon_courses"
        android:title="@string/title_courses" />
    <item
        android:id="@+id/action_grades"
        android:icon="@drawable/icon_grades"
        android:title="@string/title_grades" />
    <item
        android:id="@+id/action_schedule"
        android:icon="@drawable/icon_schedule"
        android:title="@string/title_schedule" />
    <item
        android:id="@+id/action_discipline"
        android:icon="@drawable/icon_behavior"
        android:title="@string/title_discipline" />
</menu>